<resources>
    <string name="app_name">Remind App</string>
    <string name="wakeUpTime">Wake Up Time</string>
    <string name="travelTime">Estimate travel time to school</string>
    <string name="alarmSubmitButton">Alarm Submit</string>
    <string name="textSubmitButton">Text Message Submit</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="wrongPassUser">Wrong Password</string>
    <string name="title_activity_login_actvity">loginActvity</string>
    <string name="normalSchedule">Normal Schedule</string>
    <string name="firstPeriodOff">First Period OFF</string>
    <string name="secondPeriodOff">Second Period OFF</string>
    <string name="thirdPeriodOff">Third Period OFF</string>
    <string name="fourthPeriodOff">Fourth Period OFF</string>
    <string name="fifthPeriodOff">Fifth Period OFF</string>
    <string name="lunchA">Lunch A</string>
    <string name="lunchB">Lunch B</string>
    <string name="students">Students</string>
    <string name="adminLogin">Administrator Login</string>
    <string name="clipperWednesdayALunch">Clipper Wednesday A Lunch</string>
    <string name="clipperWednesdayBLunch">Clipper Wednesday B Lunch</string>
    <string name="twoHourDelay">Two Hour Delay</string>
    <string name="halfDay">Half Day</string>
    <string name="cancelAlarm">Cancel Alarm</string>
</resources>
